<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="wrap_content"
    >

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/date"
                android:layout_width="42dp"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:layout_marginLeft="10dp" android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
        />
        <TextView
                android:text="@string/myspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp" android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="40dp" android:layout_marginTop="10dp"
                android:background="?android:attr/colorBackground"/>
        <TextView
                android:text="@string/realspeed"
                android:layout_width="91dp" android:layout_marginBottom="10dp" android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:layout_marginStart="42dp" android:layout_marginTop="10dp"
                android:background="?android:attr/colorBackground"/>

    </TableRow>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"><![CDATA[
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_margin="10dp"/>
            ]]>
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/colorBackground"
                    tools:listitem="@layout/recyclerview_item">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/delete_database"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" android:id="@+id/bttnDeleteDataBase"
                        android:layout_marginStart="30dp" android:layout_marginTop="10dp"/>
                <Button
                        android:text="@string/export_databaseHistoryActivity"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" android:id="@+id/bttnExportDataBase"
                        android:layout_marginStart="10dp" android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>